@@ -16,10 +16,13 @@ HOSTS:
     hypervisor: <%= hypervisor %>
 
   el7:
-    roles:
-      - client
     platform: el-7-x86_64
     box: centos/7
+    hypervisor: <%= hypervisor %>
+
+  el8:
+    platform: el-8-x86_64
+    box: centos/8
     hypervisor: <%= hypervisor %>
 
 CONFIG:
