@@ -46,7 +46,7 @@ describe 'gpasswd' do
       end
 
       it 'should have populated the group' do
-        group_members = on(host, "getent group #{group}").output.strip.split(':').last.split(',')
+        group_members = on(host, "getent group #{group}").output.strip.split(':')[3] || []
 
         expect(group_members - users).to be_empty
       end
@@ -65,7 +65,7 @@ describe 'gpasswd' do
       end
 
       it 'should have populated the group' do
-        group_members = on(host, "getent group #{group}").output.strip.split(':').last.split(',')
+        group_members = on(host, "getent group #{group}").output.strip.split(':')[3] || []
 
         expect(group_members - users).to be_empty
       end
@@ -84,7 +84,7 @@ describe 'gpasswd' do
       end
 
       it 'should have populated the group' do
-        group_members = on(host, "getent group #{group}").output.strip.split(':').last.split(',')
+        group_members = on(host, "getent group #{group}").output.strip.split(':')[3] || []
 
         expect(group_members - users).to be_empty
       end
@@ -103,7 +103,7 @@ describe 'gpasswd' do
       end
 
       it 'should have populated the group' do
-        group_members = on(host, "getent group #{group}").output.strip.split(':').last.split(',')
+        group_members = on(host, "getent group #{group}").output.strip.split(':')[3] || []
 
         expect(group_members - (users + meddling_kids)).to be_empty
       end
@@ -123,13 +123,32 @@ describe 'gpasswd' do
       end
 
       it 'should have populated the group' do
-        group_members = on(host, "getent group #{group}").output.strip.split(':').last.split(',')
+        group_members = on(host, "getent group #{group}").output.strip.split(':')[3] || []
+
         expect(group_members - ['user1','user2']).to be_empty
       end
 
       it 'should have a GID of 333' do
         group_gid = on(host, "getent group #{group}").output.strip.split(':')[2]
         expect(group_gid).to eq '333'
+      end
+    end
+
+    context 'with a user that does not exist' do
+      let(:manifest) {
+        <<-EOM
+          user { 'real': ensure => 'present' }
+          user { 'fake': ensure => 'absent' }
+          group { 'real': members => ['real','fake'] }
+        EOM
+      }
+
+      it 'should add the real user to the real group' do
+        apply_manifest_on(host, manifest, :catch_failures => true)
+      end
+
+      it 'should be idempotent' do
+        apply_manifest_on(host, manifest, :catch_changes => true)
       end
     end
   end
